--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     background: rgb(238,174,202);
     background: linear-gradient(40deg, rgba(238,174,202,1) 0%, rgba(105,170,246,1) 100%);
     border-radius: 55px;
-    border-top: 1px solid transparent;
+    border: 1px solid rgb(255, 255, 255);
     -webkit-box-shadow: 0px 53px 45px -8px rgba(14,121,235,0.52);
     -moz-box-shadow: 0px 53px 45px -8px rgba(14,121,235,0.52);
     box-shadow: 0px 53px 45px -8px rgba(14,121,235,0.52);
@@ -31,6 +31,26 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
     margin: 68px auto;
     border-radius: 45px;
     -webkit-box-shadow: 0px 28px 45px -8px rgba(14,121,235,0.52);
--moz-box-shadow: 0px 28px 45px -8px rgba(14,121,235,0.52);
-box-shadow: 0px 28px 45px -8px rgba(14,121,235,0.52);
+    -moz-box-shadow: 0px 28px 45px -8px rgba(14,121,235,0.52);
+    box-shadow: 0px 28px 45px -8px rgba(14,121,235,0.52);
+    border: 1px solid transparent;
+}
+
+.icon {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    color: #ffffff;
+    
+}
+h2, i {
+    background: linear-gradient(40deg, rgba(238,174,202,1) 0%, rgba(105,170,246,1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 2px 2px 10px rgba(117, 117, 117, 0.3);
+}
+i {
+    font-size: 40px;
 }
